--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -1,3 +1,4 @@
+
 @CHARSET "UTF-8";
 
 body {
@@ -8,7 +9,7 @@ body {
 #header {
     width: 100%;
     height: 70px;
-    background-color: rgb(0, 0, 0);
+    background-color: #333333;
 }
 
 #content {
@@ -18,11 +19,8 @@ body {
 }
 
 h1 {
-    width: 94%;
-    padding-top: 17px;
-    padding-left: 3%;
     font-size: 24px;
-    color: #eeeeee;
+    display: inline;
 }
 
 h2 {
@@ -94,24 +92,46 @@ button {
 
 }
 
-table#employee_list th{
-    width: 29%;
-    padding: 10px;
+table#employee_list th {
+    width: 30%;
+    padding: 10px 2%;
 }
 
-table#employee_list td{
+table#employee_list td {
     width: 29%;
     padding: 10px 2%;
 }
 
-tr.row1{
-    background-color: #f2f2f2;
+tr.row1 {
+        background-color: #f2f2f2;
 }
-
-tr.row0{
-    background-color: #ffffff;
+tr.row0 {
+        background-color: #ffffff;
 }
 
 select {
     height: 30px;
+}
+
+#header_menu {
+    width: 57%;
+    padding-top: 17px;
+    padding-left: 3%;
+    display: inline-block;
+}
+
+#employee_name {
+    color: #cccccc;
+    width: 36%;
+    padding-right: 3%;
+    text-align: right;
+    display: inline-block;
+}
+
+#header a {
+    color: #eeeeee;
+}
+
+h1 a {
+    color: #eeeeee;
 }
